<resources>
    <string name="app_name">Reports</string>
    <string name="add">Add</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="ToastSave">Note was saved</string>
    <string name="ToastCancel">No notes saved</string>
    <string name="save">Save</string>
    <string name="noteDeleted">Note Deleted</string>
    <string name="register_text">Not registed yet ? click here</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="reports">Reports</string>
    <string name="logo">Logo</string>
    <string name="anonymus_login">Anonymus Login</string>
    <string name="user_registed">User registed with success</string>
    <string name="register_error">Some error occurred</string>
    <string name="title_activity_maps">Map</string>
    <string name="popupDescription">Description</string>
    <string name="buttonSave">Save</string>
    <string name="buttonCancel">Cancel</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="report_image">Report image</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="or">Or</string>
</resources>
